--- a/AzureFunctions/appsettings.json
+++ b/AzureFunctions/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "IsEncrypted": false,
   "Values": {
-    "AzureWebJobsStorage": "",
-    "AzureWebJobsDashboard": ""
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "AzureWebJobsDashboard": "UseDevelopmentStorage=true"
   }
 }
